# quantumhack_portfoliomaxxer

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  README.md  pyproject.toml  railway.json
artifacts/ibm/: ibm_job_ids.json  ibm_jobs.py  ibm_results_all.json  run_ibm.py  run_ibm_full.py
artifacts/iqm/: interpret.py  iqm_runner.py  q50-immun-19082355.out  q50_immunization_raw.json  q50_immunization_results.json  q50_immunization_results.md  q50_run_binary.py  q50_run_binary_gf5.py  q50_run_immunization.py  submit_q50_binary.sh  submit_q50_binary_gf5.sh  submit_q50_immunization.sh
artifacts/iqm/binary/: interpret_binary.py  q50-binary-19082718.out  q50_binary_result_raw.json  q50_immunization_binary.qasm2  q50_immunization_binary.qasm3  q50_immunization_binary_meta.json
artifacts/iqm/binary_gf5/: q50-binary-gf5-19082767.out  q50_binary_gf5_result_raw.json  q50_immunization_binary_gf5.qasm2  q50_immunization_binary_gf5.qasm3  (+1 more)
artifacts/lumi/: sweep_results.csv  sweep_results.json  sweep_slurm.out
dqi_portfolio/: __init__.py  _vendor.py  bases.py  dqi.py  dqi_algebraic.py  dqi_gje.py  gf2.py  immunization.py  metrics.py  readout.py  report.py
scripts/: _immun_circuit.py  algebraic_prototype.py  algebraic_t2_prototype.py  bm_datapath_t2.py  bp_vs_gje.py  dqi_t2_deliverables.py  immunization_binary.py  immunization_binary_gf5.py  immunization_prototype.py  iqm_access_check.py  lumi_sweep.py  render_t1_7bond_circuit.py  rs_forney_symbol.py  verify_gje.py
web/: README.md  package.json  pnpm-lock.yaml
web/src/: env.js
webapp_cli/: __init__.py  cli.py
(+18 files in other folders)
