[project]
name = "dqi-immunization"
version = "0.1.0"
description = "Fixed-income immunization as algebraic DQI decoding (BCH/Reed-Solomon)"
readme = "README.md"
requires-python = ">=3.12,<3.14"
# Core: everything needed to build and statevector-simulate the DQI circuits.
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "qiskit>=1.2",
    "qiskit-aer>=0.15",
    "matplotlib>=3.8",
]

[project.optional-dependencies]
# QPU execution / device-aware transpilation on VTT Q50 (IQM hardware).
# Only needed by scripts/iqm_access_check.py and artifacts/iqm/q50_run_*.py.
qpu = ["iqm-client[qiskit]>=34.0.3"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["dqi_portfolio"]
